03_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: app1
  labels:
    app: app1
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    # attach this service to the contaienr with the app label.
    app: app1
